securityを動作させる
